tests/ui/fail/lifetime-bound.stderr
error: #[derive(VariantPartialEq)] does not support lifetime bounds
 --> tests/ui/fail/lifetime-bound.rs:5:25
  |
5 | struct MyStruct<'a, 'b: 'a> {
  |                         ^^
